[build-system]
requires=[
    "setuptools>=62.1.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "guinea"
version = "0.0.1"
requires-python = ">=3.12"
description = "Pygame-powered library for easier pygame GUI creation."
readme = "README.md"
authors = [
    { name = "Marek 'm4reQ' Mizerski", email = "m.mizerski4@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: pygame",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: User Interfaces"
]
dependencies = [
    "pygame"
]

[project.urls]
Home = "https://github.com/m4reQ/pygame-widgets"
Issues = "https://github.com/m4reQ/pygame-widgets/issues"

[tool.setuptools]
packages = ["guinea"]

[tool.setuptools.package-data]
guinea = ["assets/*"]
