[metadata]
name = pygame-widgets
version = 0.0.1
author = m4reQ
description = Python package for GUI creation in Pygame.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/m4reQ/pygame-widgets
project_urls =
    Issue Tracker = https://github.com/m4reQ/pygame-widgets/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src